[tool.poetry]
name = "hi-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hi_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
