[tool.poetry]
name = "hi-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hi_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^1.4.41"
sqlmodel = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
